@@ -42,16 +42,17 @@ public class RequestPrinter {
     private static final String NEW_LINE = System.getProperty("line.separator");
     private static final String EQUALS = "=";
     private static final String NONE = "<none>";
-    private static final String CONTENT_TYPE = "Content-Type";
-    private static final String CHARSET = "charset";
-
 
     public static String print(FilterableRequestSpecification requestSpec, String requestMethod, String completeRequestPath,
                                LogDetail logDetail, PrintStream stream, boolean shouldPrettyPrint) {
         final StringBuilder builder = new StringBuilder();
-        if (logDetail == ALL) {
+        if (logDetail == ALL || logDetail == METHOD) {
             addSingle(builder, "Request method:", requestMethod);
+        }
+        if (logDetail == ALL || logDetail == PATH) {
             addSingle(builder, "Request path:", completeRequestPath);
+        }
+        if (logDetail == ALL) {
             addProxy(requestSpec, builder);
         }
         if (logDetail == ALL || logDetail == PARAMS) {
